<resources>
    <string name="app_name">XXXX</string>
    <string name="new_disease_course">新建病历</string>
    <string name="user_name">姓名：</string>
    <string name="date">日期：</string>
    <string name="department">科室：</string>
    <string name="diagnosis">诊断：</string>
    <string name="the_illness">病情：</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>


    <string-array name="tabs_title">
        <item>遍历</item>
        <item>提醒</item>
        <item>我的</item>
    </string-array>

    <string-array name="child_tabs_title">
        <item>单次遍历</item>
        <item>资料分类</item>
        <item>日常记录</item>
    </string-array>
</resources>
